--- a/SwordDemoLibrary/webbasecontent/src/main/assets/javascript.html
+++ b/SwordDemoLibrary/webbasecontent/src/main/assets/javascript.html
@@ -16,12 +16,29 @@
 			function callAndroidUrl() {
 				document.location = "js://webview?arg1=111&arg2=222"
 			}
+			
+			function clickAlert() {
+				alert("js://demo?arg1=111&arg2=222")
+			}
+			
+			function clickConfirm() {
+				var result = confirm("js://demo?arg1=111&arg2=222")
+				alert("demo" + result)
+			}
+			
+			function clickPrompt() {
+				var result = prompt("js://demo?arg1=111&arg2=222")
+				alert("demo" + result)
+			}
 		
 	</script>
 </head>
 
 <body>
-	<button type="button" id="button1" onclick="callAndroid()">点击执行 Android 代码</button>
+	<button type="button" id="button1" onclick="callAndroidUrl()">点击执行 Android 代码</button>
+	<button type="button" id="clickAlert" onclick="clickAlert()">alert 弹框</button>
+	<button type="button" id="clickConfirm" onclick="clickConfirm()">confirm 弹框</button>
+	<button type="button" id="clickPrompt" onclick="clickPrompt()">prompt 弹框</button>
 </body>
 
 
