1. 移除无用代码 2. bug 修复，TemplateWebView 继承了 BaseWebView，因此 BaseWebView 需要用 open 修饰 3. BaseWebview 启用 Javascript，修复 webview.html 中执行 JS 脚本中 showToast 方法无法显示 Toast 问题 4. CompileSdkVersion 改为 33 之后，WebSettings 中的 setAppCacheEnabled 和 setAppCachePath 这两个函数被移除

--- a/SwordDemoLibrary/app/src/main/assets/webview.html
+++ b/SwordDemoLibrary/app/src/main/assets/webview.html
@@ -17,10 +17,10 @@
 	
 	</style>
 	<title>Carson</title>
-	<script>
-				function showToast() {
-					bridge.showToast("Hello World")
-				}
+	<script type="text/javascript">
+		function showToast() {
+			bridge.showToast('Hello World')
+		}
 	</script>
 </head>
 
